momentuHMM 1.4.2 2018-06-11
-----------------
NEW FEATURES

* retrySD argument added to crawlWrap for additional flexibility when exploring the likelihood surface using retryFits

* shape argument added to plotSat function

* projargs argument added to plotSat function (for handling projected data coordinates)

* data argument of plotSat function can now be a data frame, momentuHMMData, momentuHMM, miHMM, or miSum object


CHANGES

* 'angleStrength' special function name changed to 'angleFormula'

* strength argument in 'angleFormula' special function is now optional

* when theta and/or fixPar arguments are missing in crawlWrap, crawl::crwMLE default values are now used

* bug fix in crawlWrap when retryFits>0 and control argument is NULL. This bug caused additional model fitting attempts to fail.


momentuHMM 1.4.1 2018-05-21
-----------------
NEW FEATURES

* special function 'toState' can now be used in formula argument for modelling transitions to specific states

* timeInStates function added for calculating activity budgets

* modelName argument added to fitHMM and MIfitHMM

* added setModelName and setStateNames functions

* added stationary and plotStationary functions for calculating and visualizing stationary state probabilities as a function of covariates

* plotStationary argument added to plot.momentuHMM, plot.miHMM, and plot.miSum

* added summary.momentuHMMData function

CHANGES

* bug fix when a pseudo-design matrix formula includes interactions with >1 factor variable

* check and print package version upon loading

* unit tests no longer included in CRAN build because they were taking too long

* updated citation info


momentuHMM 1.4.0 2018-02-27
-----------------
NEW FEATURES

* von Mises consensus distribution of Rivest et al. (2016) can now be specified for angular data streams
