@@ -5,7 +5,7 @@
 #' to fetch a satellite image from Google. An Internet connection is required to use
 #' this function.
 #'
-#' @param data Data frame or \code{\link{momentuHMMData}} object, with necessary fields 'x' and 'y'.  A \code{\link{momentuHMM}}, \code{\link{miHMM}}, or \code{\link{miSum}} object is also permitted, from which the data will be extracted.
+#' @param data Data frame or \code{\link{momentuHMMData}} object, with necessary fields 'x' (longitudinal direction) and 'y' (latitudinal direction).  A \code{\link{momentuHMM}}, \code{\link{miHMM}}, or \code{\link{miSum}} object is also permitted, from which the data will be extracted.
 #' If \code{states=NULL} and a \code{momentuHMM}, \code{miHMM}, or \code{miSum} object is provided, the decoded states are automatically plotted.
 #' @param zoom The zoom level, as defined for \code{\link{get_map}}. Integer value between
 #' 3 (continent) and 21 (building).
@@ -53,6 +53,12 @@ plotSat <- function(data,zoom=NULL,location=NULL,segments=TRUE,compact=TRUE,col=
     if(inherits(data,"momentuHMM")) states <- viterbi(data)
     else if(inherits(data,"miHMM")) states <- data$miSum$Par$states
     else states <- data$Par$states
+  }
+  if(is.null(stateNames)){
+    if(inherits(data,c("momentuHMM","miHMM","miSum"))){
+      if(inherits(data,c("momentuHMM","miSum"))) stateNames <- data$stateNames
+      else if(inherits(data,"miHMM")) stateNames <- data$miSum$stateNames
+    }
   }
   
   if(inherits(data,"momentuHMM")) data <- data$data
